finished player hand evaluation class